<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">MBN Live</string>
   
   <!-- Ad Screen  -->
   <string name="content_assist_dismiss_text">Dismiss</string>
   <string name="content_assist_ad_text">Advertisement</string>
   
   <!-- Radio Player -->
   <string name="play_button_instructions">Press <b>play</b> to begin stream.</string>
   <string name="loading_station">Loading MBN Live…</string>
   <string name="visit_mbn_website">Visit MBN Website</string>
   <string name="content_assist_play_radio">Play radio stream</string>
   <string name="content_assist_mbn_logo">Michigan Business Network logo</string>
   <string name="content_assist_visit_mbn_button">Visit MBN Website</string>
   <string name="now_playing_format"><b>Now Playing:</b> %s</string>
   
</resources>